# api/docs/swagger.yaml
@@ -135,7 +135,7 @@ definitions:
         example: 123e4567-e89b-12d3-a456-426614174000.pdf
         type: string
       url:
-        example: http://localhost:9000/documents/123e4567-e89b-12d3-a456-426614174000.pdf?X-Amz-Algorithm=...
+        example: http://api-server:8080/documents/123e4567-e89b-12d3-a456-426614174000.pdf
         type: string
     type: object
   api.DocumentsResponse:
@@ -926,7 +926,7 @@ paths:
       - documents
   /documents/{id}:
     get:
-      description: Retrieves a presigned URL for a document by key
+      description: Streams document content directly to client
       parameters:
       - description: Document key
         in: path
@@ -934,21 +934,25 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - '*/*'
       responses:
         "200":
-          description: OK
+          description: Document content
           schema:
-            $ref: '#/definitions/api.DocumentResponse'
+            type: file
         "400":
           description: Invalid document key
           schema:
             $ref: '#/definitions/api.InvalidRequestError'
+        "404":
+          description: Document not found
+          schema:
+            $ref: '#/definitions/api.Error'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/api.Error'
-      summary: Get document URL
+      summary: Download document
       tags:
       - documents
   /permissions:
